[metadata]
name = netlink
version = 0.2
author = Boaz Tene
author_email = boaztene2005@gmail.com
description = Python Netlink client for linux 
long_description = file: LICENSE, README.md 
long_description_content_type = text/markdown
license = GNU General Public License
license_files = 
    = file: LICENSE
platforms =
    = Linux
url = https://github.com/BoazTene/netlink

[options]
include_package_data = True
package_dir=
   =src

[options.package_data]
src = 
    =*.h 
